services/media-library/jellyfin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
